--- a/django_heroku_deploy/template/index.html
+++ b/django_heroku_deploy/template/index.html
@@ -1,4 +1,4 @@
-{% extends "main-template.html" %} {% block title %}BAZAR W HOME{% endblock %}{% block content %}{% load static %}
+{% extends "parent/main-template.html" %} {% block title %}BAZAR W HOME{% endblock %}{% block content %}{% load static %}
 
 ADD CONTENT
 {% endblock %}
