--- a/django_heroku_deploy/template/parent/main-template.html
+++ b/django_heroku_deploy/template/parent/main-template.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="mnu-principal">
             <div class="navbar-nav">
                 <a class="nav-link" href="/home/">HOME</a>
-                <a class="nav-link" href="/cart/">CARTS</a>         
+                <a class="nav-link" href="/cart/">CART</a>
             </div>
         </div>
     </nav>
